we gots ourselves a CRUD website :o

--- a/CourseProject/WebContent/AddCountry.html
+++ b/CourseProject/WebContent/AddCountry.html
@@ -4,7 +4,7 @@
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Add Country</title>
 </head>
 <body>
 	<h2>Add Country</h2>
