--- a/CourseProject/WebContent/Index.html
+++ b/CourseProject/WebContent/Index.html
@@ -12,5 +12,7 @@
 	<br>
 	<a href="AddCountry.html">Add Country</a>
 	<br>
+	<a href="CategoryQuery.jsp">Select Category >> List Products >> View Orders for Product</a>
+	<br>
 </body>
 </html>
